labo3/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-fine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: target-fine
  template:
    metadata:
      labels:
        app: target-fine
        group: target
    spec:
      containers:
        - name: target-fine
          image: h2so40627/httpresponsetester
          ports:
            - containerPort: 80
          args:
            - "200"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-fail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-fail
  template:
    metadata:
      labels:
        app: target-fail
        group: target
    spec:
      containers:
        - name: target-fail
          image: h2so40627/httpresponsetester
          ports:
            - containerPort: 80
          args:
            - "500"
---
apiVersion: v1
kind: Service
metadata:
  name: target
  labels:
    app: target
    service: target
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    group: target
